@@ -12,6 +12,7 @@ wavparser       2     AUDIO
 zlibparser      1     ZLIB(CMP) (in pdf IMAGE8GRAY,IMAGE8,IMAGE24,IMAGE32,IMAGE4,IMAGE1) brute=false
 zlibparser      3     ZLIB(CMP) (in pdf IMAGE8GRAY,IMAGE8,IMAGE24,IMAGE32,IMAGE4,IMAGE1) brute=true
 pnmpparser      2     IMAGE1 IMAGE8GRAY IMAGE24 IMAGE32
+pdflzwparser    2     CMP
 
 Priority  - is set by parser and type is returned by parser.
 Type - is what the parser reports to "analyzer" if something was found.
